# factory-game

./: CMakeCache.txt  CMakeLists.txt  Makefile  MyGameEngine  build.exec  build.sh  cmake_install.cmake  compile_commands.json  config.json  factory_game_mvp.md  imgui.ini
.cache/clangd/index/: Buffer.hpp.64767C955C4CD8A3.idx  BuildSystem.cpp.8D2DFD046A6BFB1B.idx  Camera.hpp.CAE9833BA6DB8CD7.idx  Chunk.cpp.660B41E73AFF3210.idx  Chunk.hpp.807A1C8CE6E19F36.idx  ChunkEntity.hpp.8FE808DDE471784D.idx  ChunkRenderer.hpp.19A48E10F6C20D00.idx  ChunkTransform.hpp.0C390D5B45BA49CC.idx  Entity.cpp.6DAC6F1EE81CAF59.idx  Entity.hpp.63F8FDC87485FF35.idx  Font.h.4C5739C9B0D605B8.idx  GeneratorSettings.hpp.71F2B8CB1C8CAB08.idx  IComponent.hpp.C7F46E483D9B32C4.idx  Input.cpp.7EEA092E46F848EF.idx  Input.hpp.8291F48082C10F43.idx  Inventory.cpp.537C480294EFBE97.idx  MainScene.hpp.EFD7A5F31BF114F9.idx  Map.cpp.54F95F218DFD6BFF.idx  Map.hpp.F743C6380755033B.idx  MapGenerator.cpp.E138D8B65B42E9FF.idx  MapGenerator.hpp.8218353984BF3851.idx  Model.hpp.AC40FA555FB01E23.idx  PerlinNoise.hpp.6F82A0BF1ADBCA3D.idx  ResourceManager.cpp.E05F91E2EE75E996.idx  ResourceManager.hpp.3076D9E934D3E951.idx  SSBOBuffer.hpp.E5FDB1796BEA45F0.idx  Scene.cpp.7279F2C9C02D1BA0.idx  Scene.hpp.F6B218C1857E5618.idx  Shader.hpp.21A635508AE112E2.idx  Simplex.cpp.D8D720B79AF93D2F.idx  Simplex.hpp.9800FECCD0F0BDFA.idx  SimplexNoise.cpp.17A37B374ABCF919.idx  SimplexNoise.h.35065A39B49F23D4.idx  Texture.cpp.D06E4BFB7F6F1867.idx  Texture.hpp.D4E0FFC1B9A47D37.idx  ThreadedMapGenerator.hpp.CE717685133B2EE3.idx  TileEntity.hpp.153260123CD85F58.idx  (+28 more)
include/: SimplexNoise.h
sprites/tiles/: tiles.aseprite
src/: main.cpp
src/components/: Chunk.cpp  Map.hpp
src/engine/: Input.cpp  ResourceManager.cpp  ResourceManager.hpp  Simplex.cpp  View.cpp
src/scenes/: MainScene.hpp
(+22 files in other folders)
